fix pdp height on mobile

--- a/packages/scandipwa/src/component/ProductBottomSheet/ProductBottomSheet.style.scss
+++ b/packages/scandipwa/src/component/ProductBottomSheet/ProductBottomSheet.style.scss
@@ -11,7 +11,7 @@
 
 .ProductBottomSheet {
     &-Wrapper {
-        min-height: calc(var(--vh, 1vh) * 100 - 120px);
+        min-height: calc(var(--vh, 1vh) * 100 - 127px);
         padding-top: 12px;
     }
     &-Pill {
