--- a/packages/scandipwa/src/route/ProductPage/ProductPage.style.scss
+++ b/packages/scandipwa/src/route/ProductPage/ProductPage.style.scss
@@ -20,7 +20,7 @@
     }
 
     @include mobile {
-        height: 100vh;
+        height: 100%;
         margin-top: -50px;
         margin-bottom: 0;
     }
